tests/miniJava/pos/000702_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) while ( 0 ) { } else { } } }
