tests/miniJava/neg/006452_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while static ( 0 ) { } } }
